Updated sidebar with personal info

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,20 +1,20 @@
-<b>What is this all about</b>
+<b>Who am I?</b>
 <p>
-  This is a free Jekyll mansonry theme. It was originally on Bitbucket in a private repo but you can now fork it on Github.
+  I'm just a guy who is tinkering with new code to better himself while meandering through life.
 </p>
 <p>
-The color combination used here comes from <a href="http://clrs.cc" target="_blank">CLRS</a>.
+ A niche for languages and a background in IT security and forensics, I'm the guy that tries to solve every problem and attempts to see all sides of an issue.  I'm a proud second generation Norseman, and I'm in love with cyberpunk themes and future tech.
 </p>
-<b>Eh, Saigon?</b>
+<b>A quick look at strengths</b>
 <p>
-Yep, a city in southern Viet Nam. Did you know Saigon has some of the world's most beautiful cafes?
   <ul>
-    <li><a href="http://www.nomadicnotes.com/travel-blog/ho-chi-minh-city-cafes/">Nomadic Notes</a></li>
-    <li><a href="http://nomadcapitalist.com/2016/01/11/best-cafes-in-se-asia-for-high-achieving-nomads/">Nomad Capitalist</a></li>
-    <li><a href="http://www.adventurefaktory.com/vietnam-the-ultimate-saigon-cafes-list/">Adventure Faktory</a></li>
+    <li>Can speak Japanese and French like a child</li>
+    <li>Have an expired CEH and Sec+ certification</li>
+    <li>Able to Google Fu and StackOverflow with the best</li>
+    <li>Can drone on about Space and Physics with some authority</li>
+    <li>Married and loving every second of it</li>
   </ul>
 </p>
-
 <p>
-  A good advice though is probably bringing your headphones with you since Asian music taste evolves around ”Criminal” by Britney Spears and the like.
+  Thus concludes the obligatory sidebar.  Soon I'll have this theme fully built and designed for my tastes.  Soon&trade;
 </p>
