fixed the rightblock <b>, whoops, thought it was elsewhere

--- a/css/main.css
+++ b/css/main.css
@@ -408,7 +408,7 @@ section#home-hero{
 		width:20%;
 		float:left;
 	}
-	.rightblock b, .rightblock strong, .rightblock a {color: #777}
+	.rightblock b, .rightblock strong, .rightblock a {color: #BBB}
 
 }
 
