boosted #logo to be inline with bold color (#BBB)

--- a/css/main.css
+++ b/css/main.css
@@ -95,7 +95,7 @@ h1 {
 #logo {
 	float: left;
 	font-size: 20px;
-	color: #888;
+	color: #BBB;
 }
 
 #links a {
@@ -104,7 +104,7 @@ h1 {
 
 #logo a {
     font-size: 20px;
-    color: #888;
+    color: #BBB;
     text-decoration: none;
     font-family: "Raleway";
 }
