--- a/css/main.css
+++ b/css/main.css
@@ -349,10 +349,11 @@ only screen and (max-width: 600px) {
 .post-content {
     background: #222222!important;
     border-radius: 0;
-    color: #666;
+    color: #bbb;
 }
 .post-title {
     margin: 40px 0px 8px 0px;
+		color: #bbb;
 }
 
 section{
